Fix spacing and dark mode

--- a/content/assets/form.css
+++ b/content/assets/form.css
@@ -894,6 +894,7 @@ address {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 665;
 
   /* Make sure navigation always gets pointer events. */
   pointer-events: none;
